--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-hotkeys": "^1.1.4",
+    "react-hotkeys": "^2.0.0-pre4",
     "react-scripts": "2.1.3"
   },
   "scripts": {
